# build_gpu_colmap

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  index.html  install_cudss.ps1  vcpkg.json
.claude/: CLAUDE.md  settings.local.json
.github/workflows/: build-colmap.yml  build-glomap.yml  build-pycolmap.yml  publish-pypi.yml  release.yml  update-wheel-index.yml
cmake/: patch_ceres_arch.cmake  patch_ceres_suitesparse.cmake  patch_colmap_caspar_uint.cmake  patch_colmap_config.cmake  patch_colmap_flann.cmake  patch_colmap_flann_link.cmake  patch_colmap_gflags.cmake  patch_colmap_onnx_install.cmake  patch_colmap_targets.cmake  patch_colmap_version.cmake  patch_glomap_gklib.cmake
docs/: BUILD_ANALYSIS.md  BUILD_PYTHON_WHEELS.md  CUDSS_DETECTION.md  CUDSS_VERIFICATION.md  DEBUG_LOG.md  GFLAGS_FIX.md  GLOMAP_COLMAP_VERSION.md  INSTALL_CUDSS.md
overlay-ports/: README.md
overlay-ports/ceres/: vcpkg.json
overlay-ports/suitesparse-cholmod/: portfile.cmake
overlay-ports/suitesparse-spqr/: portfile.cmake
patches/: pycolmap-caspar-bindings.patch
pycolmap/: index.html
releases/: README.txt  RELEASE_NOTES.md  SHA256SUMS.txt
scripts/: emit_build_info.py  validate_caspar_sample.py
scripts_linux/: bootstrap.sh  build.sh  build_ceres.sh  build_colmap.sh  build_glomap.sh  build_pycolmap_wheel.sh  build_pycolmap_wheels.sh  build_pycolmap_wheels_all.sh  download_models.sh  initialize_repository.sh  sync_colmap_for_glomap.sh  update_submodules.sh  verify_build_environment.sh
scripts_windows/: bootstrap.ps1  build.ps1  build_ceres.ps1  build_colmap.ps1  build_glomap.ps1  build_pycolmap_wheel.ps1  build_pycolmap_wheels.ps1  build_pycolmap_wheels_all.ps1  create_github_release.ps1  create_release_packages.ps1  download_models.ps1  initialize_repository.ps1  launch_dev_environment.ps1  sync_colmap_for_glomap.ps1  update_submodules.ps1  verify_build_environment.ps1
